--- a/o_meni.html
+++ b/o_meni.html
@@ -21,7 +21,7 @@
 	<img src="dinosaur blender.png" width="540" height="302">
 	<img src="golden-retriever-lying-down.jpg" width="480">
 		 
-	<iframe width="1280" height="720" src="https://www.youtube.com/watch?v=v48SoIQv9io"> </iframe>
+	<iframe width="1280" height="720" src="https://www.youtube.com/embed/watch?v=v48SoIQv9io"> </iframe>
 	
 </body>
 </html>
