--- a/o_meni.html
+++ b/o_meni.html
@@ -21,7 +21,7 @@
 	<img src="dinosaur blender.png" width="540" height="302">
 	<img src="golden-retriever-lying-down.jpg" width="480">
 		 
-	<iframe width="1280" height="720" src="https://www.youtube.com/embed/watch?v=v48SoIQv9io"> </iframe>
+	width="560" height="315" src="https://www.youtube.com/embed/ZPpGATJQSZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 </body>
 </html>
