--- a/o_meni.html
+++ b/o_meni.html
@@ -20,8 +20,7 @@
 	<img src="Muay-Thai-1920X1280-29.jpg" width="450" height="302">
 	<img src="dinosaur blender.png" width="540" height="302">
 	<img src="golden-retriever-lying-down.jpg" width="480">
-		 
-	width="560" height="315" src="https://www.youtube.com/embed/ZPpGATJQSZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	
+		 		 
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/ZPpGATJQSZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
